# AgentHubPro

./: .dockerignore  .env.example  .env.microservices  .replit  API_MODERNIZATION_SUMMARY.md  ARCHITECTURE.md  BIGQUERY_SETUP.md  CACHE_OPTIMIZATION_ANALYSIS.md  CLOUD_RUN_DEPLOYMENT_STRATEGY.md  COMPREHENSIVE_TESTING_REPORT.md  CONFIGURATION_MANAGEMENT_SUMMARY.md  DEPLOYMENT_ARCHITECTURE_UPDATE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_FINAL.md  DEPLOYMENT_GUIDE_UPDATED.md  Dockerfile  Dockerfile.dev  END_TO_END_TEST_REPORT.md  ENHANCED_CALENDAR_INSIGHTS_SUMMARY.md  ENTERPRISE_ANALYTICS_COMPREHENSIVE_SUMMARY.md  EXECUTIVE_DECISION_FRAMEWORK.md  MARKET_OPPORTUNITY_ANALYSIS.md  MICROSERVICES_EXTRACTION_PLAN.md  MICROSERVICES_OPTIMIZATION_PLAN.md  NEGATIVE_TESTING_RESULTS.md  NEW_STRUCTURE_MIGRATION.md  PERSISTENT_STORAGE_MIGRATION_SUMMARY.md  README.CloudRun.md  README.Docker.Microservices.md  README.Docker.md  RISK_ASSESSMENT_MATRIX.md  STRATEGIC_ANALYSIS_REPORT.md  TESTING_RESULTS.md  ULTRA_GRANULAR_MICROSERVICES_PLAN.md  USER_PERSONAS_ANALYSIS.md  VALIDATION_MODELS_IMPLEMENTATION_SUMMARY.md  cloudbuild.yaml  comprehensive-analytics-report.html  comprehensive-rbac-test-results.md  comprehensive-strategic-report.html  (+31 more)
admin-customer-uploads/: customer_customer_techcorp_healthcare_policies.txt
admin-uploads/: agent_1_healthcare_policies.md  agent_1_healthcare_services.txt  agent_2_product_catalog.json  agent_5_integration_test.txt
microservices/: README.md  base.Dockerfile  docker-compose-optimized.yml  docker-compose.yml  nginx-gateway.conf  nginx.conf  requirements.txt  (+6 more)
(+289 files in other folders)
